# beam

./: README.md  netlify.toml
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/include/beam/: beam.hpp  beam_analyzer.hpp  design_code.hpp  design_strategy.hpp  loads.hpp  materials.hpp  results.hpp  section.hpp  support.hpp
backend/src/: main.cpp
backend/src/api/: main.cpp
backend/src/app/: main.cpp
backend/src/core/: beam.cpp  beam_analyzer.cpp  design_code.cpp  design_strategy.cpp  loads.cpp  results.cpp  support.cpp
backend/tests/: beam_tests.cpp
user-interface/: index.html  package.json
user-interface/src/: App.tsx
user-interface/src/api/: beam-client.ts
user-interface/src/components/: add-load-modal.tsx  add-support-modal.tsx  beam-builder.tsx  beam-diagram.tsx  beam-form.tsx  free-body-diagram.tsx  load-row.tsx  modal.tsx  number-input.tsx  results-panel.tsx
user-interface/src/hooks/: use-beam-input.ts  use-beam-model.ts
user-interface/src/lib/: beam-file.ts  beam-validation.ts
user-interface/src/types/: beam.ts
